--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.1",
     "expo": "~49.0.15",
-    "expo-camera": "^13.6.0",
-    "expo-image-picker": "^14.5.0",
+    "expo-camera": "~13.4.4",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
